# cfs-osal

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  .gitmessage  .gitmodules  .travis.yml  CMakeLists.txt  CodingStyleGuide.md  README.md  WORKSPACE  conanfile.py  run  sonar-project.properties
.ci/travis/: .coverity.travis.yml
.circle-ci/: config.yml
.github/: stale.yml
.gitlab/ci/: applications-qa.yml  applications-review.yml  applications.yml  applycations-deployment.yml  base-test.yml  base.yml  build-lifecycle.yml  clean.yml  continous-code-quality-check.yml  dds-test.yml  dds.yml  debug-build.yml  dind.yml  globals.yml  helm.yml  mirrors.yml  ssh.yml
src/it/: BUILD  CMakeLists.txt  cucumber.yml
src/it/cfs/osal/features/: 000-osal-semver.feature  001-Dummy.feature  001-osal.feature  003-osal-file.feature  004-osal-file-sys.feature  005-osal-loader.feature
src/it/cfs/osal/features/step_definitions/: ApplicationSteps.cpp  ApplicationSteps.hpp
src/it/cfs/osal/features/support/: hooks_rb
src/it/features/: 001-Dummy.feature  002-osal-core.feature  006-osal-network.feature  007-osal-timer.feature  008-osal-signatures.feature
src/it/features/step_definitions/cfs/osal/: ApplicationSteps.cpp  ApplicationSteps.hpp
src/main/cpp/: BUILD  BUILD.bazel  CMakeLists.txt
src/main/cpp/cfs/osal/: Activator.cpp  Activator.hpp  BidirectionnalContainer.cpp  BidirectionnalContainer.hpp  BinaryReader.cpp  BinaryReader.hpp  BinaryWriter.cpp  BinaryWriter.hpp  BlockDevice.cpp  BlockDevice.hpp  ByteStram.hpp  ByteStream.cpp  ByteStream.hpp  CharacterDevice.cpp  CharacterDevice.hpp  Comparator.hpp  CpuAffinity.cpp  CpuAffinity.hpp  Error.hpp  ErrorList.hpp  File.cpp  File.hpp  FileDescriptor.cpp  FileDescriptor.hpp  Helpers.hpp  Lock.hpp  Mailbox.cpp  Mailbox.hpp  MappedMemory.cpp  MappedMemory.hpp  Message.cpp  Message.hpp  MessageData.cpp  MessageData.hpp  MessageQueue.cpp  MessageQueue.hpp  NoOp.cpp  NoOp.hpp  Object.cpp  Object.hpp  (+19 more)
src/main/cpp/cfs/osal/cpumanager/: CpuAffinity.cpp  CpuAffinity.hpp  CpuInfo.cpp  CpuInfo.hpp  Topology.cpp  Topology.hpp
src/main/cpp/cfs/osal/driver/: AbstractHWDriver.cpp  AbstractHWDriver.hpp  HWDriver.hpp
src/main/cpp/cfs/osal/network/: IOManager.hpp  IOService.cpp  IOService.hpp  Socket.cpp  Socket.hpp
src/main/cpp/cfs/osal/network/can/: CAN.cpp  CAN.hpp
src/main/cpp/cfs/osal/network/i2c/: I2c.cpp  I2c.hpp
src/main/cpp/cfs/osal/network/i2s/: I2s.cpp  I2s.hpp
src/main/cpp/cfs/osal/network/rpi/: RpiUart.cpp  RpiUart.hpp
src/main/cpp/cfs/osal/network/serial/: Uart.cpp  Uart.hpp
src/main/cpp/cfs/osal/network/serial/private/: UartPrivate.cpp  UartPrivate.hpp
src/main/cpp/cfs/osal/network/spi/: Spi.cpp  Spi.hpp
src/main/cpp/cfs/osal/properties/: Connection.cpp  Connection.hpp  XObserved.hpp  XProperty.cpp  XProperty.hpp
src/main/cpp/cfs/osal/queues/: MultiProducerMultiConsumerQueue.cpp  MultiProducerMultiConsumerQueue.hpp  MultiProducerSingleConsumerQueue.cpp  MultiProducerSingleConsumerQueue.hpp  SingleProducerSingleConsumerQueue.cpp  SingleProducerSingleConsumerQueue.hpp
src/main/cpp/cfs/osal/task/: Runnable.cpp  Runnable.hpp  Task.cpp  Task.hpp
src/main/cpp/cfs/osal/thread/: WorkerThread.cpp  WorkerThread.hpp
src/main/resources/bazel/: bazel.rc
src/main/resources/cmake/macros/: CPPCheck.cmake  CodingStyle.cmake  CompilerOption.cmake  DefinePlatformSpecfic.cmake  GccCoverage.cmake  TestFeatures.cmake  Valgrind.cmake  goals.cmake
src/main/resources/configs/: AppInfo.hpp.in  GitRevision.hpp.in  Version.cpp.in  Version.hpp.in  code-formater.cfg
src/main/resources/dotfiles/: .aliases  .bashrc  .functions
src/main/resources/dotfiles/.vim/tmp/backup/: %home%happyman%workspace%workspace-build%x86_64-Linux-GNU_GCC_8.3.0-Debug%bin%Report.xml~
src/main/resources/dotfiles/.vim/tmp/undo/: %home%happyman%cfs-osal%src%main%resources%cmake%modules%FindOpenDDS.cmake
src/test/cpp/: BUILD  BUILD.bazel  CMakeLists.txt
src/test/cpp/cfs/osal/: ActivatorTest.cpp  ActivatorTest.hpp  BidirectionnalContainerTest.cpp  BidirectionnalContainerTest.hpp  BinaryWriterTest.cpp  BinaryWriterTest.hpp  CpuAffinityTest.cpp  CpuAffinityTest.hpp  FileDescriptorTest.cpp  FileDescriptorTest.hpp  LockTest.cpp  LockTest.hpp  MailboxTest.cpp  MailboxTest.hpp  MappedMemoryTest.cpp  MappedMemoryTest.hpp  MessageDataTest.cpp  MessageDataTest.hpp  MessageQueueTest.cpp  MessageQueueTest.hpp  MessageTest.cpp  MessageTest.hpp  NoOpTest.hpp  ReaderMock.cpp  ReaderMock.hpp  ResourceLimitTest.cpp  ResourceLimitTest.hpp  ResourceTest.cpp  ResourceTest.hpp  SemaphoreTest.cpp  SemaphoreTest.hpp  SerializableTest.cpp  SerializableTest.hpp  SingletonTest.cpp  SingletonTest.hpp  SpinLockTest.cpp  SpinLockTest.hpp  SystemMonitorTest.cpp  SystemMonitorTest.hpp  Test.cpp  (+6 more)
src/test/cpp/cfs/osal/cpumanager/: CpuAffinityTest.cpp  CpuAffinityTest.hpp  CpuInfoTest.cpp  CpuInfoTest.hpp
src/test/cpp/cfs/osal/log/: Logger.cpp  Logger.hpp  TestLogger.cpp  TestLogger.hpp
src/test/cpp/cfs/osal/log/internal/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp  ErrorCodeTable.cpp  ErrorCodeTable.hpp  LoggerPrivate.cpp  LoggerPrivate.hpp
src/test/cpp/cfs/osal/mocks/: SystemCallMock.cpp  SystemCallMock.hpp
src/test/cpp/cfs/osal/properties/: XObserved.hpp  XPropertyTest.hpp
src/test/cpp/cfs/osal/queues/: MSPMSConsumerQueueTest.cpp  MSPMSConsumerQueueTest.hpp
src/test/cpp/cfs/osal/task/: RunnableTest.cpp  RunnableTest.hpp
src/test/cpp/cfs/osal/thread/: WorkerThreadTest.cpp  WorkerThreadTest.hpp
