
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")

licenses(["notice"])  # Apache License

cc_test(

    name = "cfs-osal-unit-test.bin",

    srcs = [
        "cfs/osal/unitTest.cpp",
        "cfs/osal/Test.cpp",
        "cfs/osal/Test.hpp",
        "cfs/osal/ActivatorTest.cpp",
        "cfs/osal/ActivatorTest.hpp",
        "cfs/osal/cpumanager/CpuAffinityTest.cpp",
        "cfs/osal/cpumanager/CpuAffinityTest.hpp",
        "cfs/osal/cpumanager/CpuInfoTest.cpp",
        "cfs/osal/cpumanager/CpuInfoTest.hpp",
        "cfs/osal/MessageTest.cpp",
        "cfs/osal/MessageTest.hpp",
    ],

    includes = [
        ".",
    ],

    copts = [
       "-std=c++17",
       "-DLOG_LEVEL=1",
        "-D_REENTRANT",
       "-I/usr/local/include/",
    ],

    linkopts = [
       "-L/usr/local/lib",
       "-lapr-1",
       "-laprutil-1",
       "-llog4cxx",
       "-lgtest",
       "-lgmock",
     ],


    deps = [
        "//src/main/cpp:cfs-osal-main",
    ],

    data = [
        "//src/main/resources/configs:log4cxx.xml",
    ],
)
